hopefuly new update

--- a/project1.html
+++ b/project1.html
@@ -17,88 +17,49 @@
     </header>
 
     <main>
-        <!-- YouTube Video Section -->
-        <section id="project-video">
-            <iframe width="100%" height="450" src="https://www.youtube.com/embed/your-video-id" frameborder="0" allowfullscreen></iframe>
-        </section>
-
         <!-- Project Title -->
         <section id="project-title">
             <h1>Project Title</h1>
         </section>
 
-        <!-- Sections -->
+        <!-- Section 1 -->
         <section class="project-section">
-            <div class="project-header">Introduction</div>
-            <div class="project-content">
+            <div class="section-header">
+                <h2>Introduction</h2>
+            </div>
+            <div class="section-content">
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
                 <div class="text-box">
                     <p>Introduction content goes here...</p>
                 </div>
+                <div class="image-box">
+                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                </div>
             </div>
         </section>
 
+        <!-- Section 2 -->
         <section class="project-section">
-            <div class="project-header">Planning + Research</div>
-            <div class="project-content">
+            <div class="section-header">
+                <h2>Planning + Research</h2>
+            </div>
+            <div class="section-content">
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
                 </div>
                 <div class="text-box">
                     <p>Planning and research content goes here...</p>
                 </div>
-            </div>
-        </section>
-
-        <section class="project-section">
-            <div class="project-header">Materials</div>
-            <div class="project-content">
                 <div class="image-box">
                     <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-                </div>
-                <div class="text-box">
-                    <p>Materials content goes here...</p>
                 </div>
             </div>
         </section>
 
-        <section class="project-section">
-            <div class="project-header">Execution</div>
-            <div class="project-content">
-                <div class="image-box">
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-                </div>
-                <div class="text-box">
-                    <p>Execution content goes here...</p>
-                </div>
-            </div>
-        </section>
+        <!-- Additional Sections... -->
 
-        <section class="project-section">
-            <div class="project-header">Results</div>
-            <div class="project-content">
-                <div class="image-box">
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-                </div>
-                <div class="text-box">
-                    <p>Results content goes here...</p>
-                </div>
-            </div>
-        </section>
-
-        <section class="project-section">
-            <div class="project-header">Conclusion</div>
-            <div class="project-content">
-                <div class="image-box">
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-                </div>
-                <div class="text-box">
-                    <p>Conclusion content goes here...</p>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer>
