--- a/project1.html
+++ b/project1.html
@@ -22,39 +22,31 @@
             <h1>Project Title</h1>
         </section>
 
-        <!-- Section 1 -->
+        <!-- Section 1: Introduction -->
         <section class="project-section">
-            <div class="section-header">
-                <h2>Introduction</h2>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
-            <div class="section-content">
-                <div class="image-box">
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-                </div>
-                <div class="text-box">
-                    <p>Introduction content goes here...</p>
-                </div>
-                <div class="image-box">
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-                </div>
+            <div class="text-box">
+                <h2>Introduction</h2>
+                <p>Introduction content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
         </section>
 
-        <!-- Section 2 -->
+        <!-- Section 2: Planning + Research -->
         <section class="project-section">
-            <div class="section-header">
-                <h2>Planning + Research</h2>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
-            <div class="section-content">
-                <div class="image-box">
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-                </div>
-                <div class="text-box">
-                    <p>Planning and research content goes here...</p>
-                </div>
-                <div class="image-box">
-                    <img src="https://via.placeholder.com/400" alt="Placeholder Image">
-                </div>
+            <div class="text-box">
+                <h2>Planning + Research</h2>
+                <p>Planning and research content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
         </section>
 
