--- a/project1.html
+++ b/project1.html
@@ -27,8 +27,10 @@
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
-            <div class="text-box">
+            <div class="section-header">
                 <h2>Introduction</h2>
+            </div>
+            <div class="text-box">
                 <p>Introduction content goes here...</p>
             </div>
             <div class="image-box">
@@ -41,8 +43,10 @@
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
-            <div class="text-box">
+            <div class="section-header">
                 <h2>Planning + Research</h2>
+            </div>
+            <div class="text-box">
                 <p>Planning and research content goes here...</p>
             </div>
             <div class="image-box">
