--- a/project1.html
+++ b/project1.html
@@ -27,9 +27,13 @@
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
-            <div class="text-box">
-                <h2>Introduction</h2>
-                <p>Introduction content goes here...</p>
+            <div class="section-content">
+                <div class="section-header">
+                    <h2>Introduction</h2>
+                </div>
+                <div class="text-box">
+                    <p>Introduction content goes here...</p>
+                </div>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
@@ -41,16 +45,20 @@
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
-            <div class="text-box">
-                <h2>Planning + Research</h2>
-                <p>Planning and research content goes here...</p>
+            <div class="section-content">
+                <div class="section-header">
+                    <h2>Planning + Research</h2>
+                </div>
+                <div class="text-box">
+                    <p>Planning and research content goes here...</p>
+                </div>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
         </section>
 
-        <!-- Additional Sections... -->
+        <!-- Add more sections here... -->
 
     </main>
 
