--- a/project1.html
+++ b/project1.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Title</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -27,13 +29,9 @@
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
-            <div class="section-content">
-                <div class="section-header">
-                    <h2>Introduction</h2>
-                </div>
-                <div class="text-box">
-                    <p>Introduction content goes here...</p>
-                </div>
+            <div class="text-box">
+                <h2>Introduction</h2>
+                <p>Introduction content goes here...</p>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
@@ -45,25 +43,89 @@
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
-            <div class="section-content">
-                <div class="section-header">
-                    <h2>Planning + Research</h2>
-                </div>
-                <div class="text-box">
-                    <p>Planning and research content goes here...</p>
-                </div>
+            <div class="text-box">
+                <h2>Planning + Research</h2>
+                <p>Planning and research content goes here...</p>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
             </div>
         </section>
 
-        <!-- Add more sections here... -->
+        <!-- Section 3: Materials -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Materials</h2>
+                <p>Materials content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
 
+        <!-- Section 4: Execution -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Execution</h2>
+                <p>Execution content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 5: Results -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Results</h2>
+                <p>Results content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 6: Reflection -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Reflection</h2>
+                <p>Reflection content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 7: Conclusion -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Conclusion</h2>
+                <p>Conclusion content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
     </main>
 
     <footer>
         <p>&copy; 2024 Jack Phillips - Marino</p>
     </footer>
 </body>
+
 </html>
