--- a/project1.html
+++ b/project1.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Title</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -50,12 +52,80 @@
             </div>
         </section>
 
-        <!-- Add the other sections (Materials, Execution, etc.) similarly -->
+        <!-- Section 3: Materials -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Materials</h2>
+                <p>Materials content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
 
+        <!-- Section 4: Execution -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Execution</h2>
+                <p>Execution content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 5: Results -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Results</h2>
+                <p>Results content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 6: Reflection -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Reflection</h2>
+                <p>Reflection content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 7: Conclusion -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Conclusion</h2>
+                <p>Conclusion content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
     </main>
 
     <footer>
         <p>&copy; 2024 Jack Phillips - Marino</p>
     </footer>
 </body>
+
 </html>
