--- a/project4.html
+++ b/project4.html
@@ -1,27 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 3 Title</title>
+    <title>Project Title</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Back to Home</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#project-details">Project Details</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Project 3 Title</h1>
-        <p>Placeholder text for Project 3. Details about the project will be added here, including technical information, challenges faced, and project impact.</p>
+        <!-- Project Title -->
+        <section id="project-title">
+            <h1>Project Title</h1>
+        </section>
+
+        <!-- Section 1: Introduction -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Introduction</h2>
+                <p>Introduction content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 2: Planning + Research -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Planning + Research</h2>
+                <p>Planning and research content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 3: Materials -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Materials</h2>
+                <p>Materials content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 4: Execution -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Execution</h2>
+                <p>Execution content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 5: Results -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Results</h2>
+                <p>Results content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 6: Reflection -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Reflection</h2>
+                <p>Reflection content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
+
+        <!-- Section 7: Conclusion -->
+        <section class="project-section">
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+            <div class="text-box">
+                <h2>Conclusion</h2>
+                <p>Conclusion content goes here...</p>
+            </div>
+            <div class="image-box">
+                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+            </div>
+        </section>
     </main>
 
     <footer>
         <p>&copy; 2024 Jack Phillips - Marino</p>
     </footer>
 </body>
+
 </html>
