actualy adding some info to the pages

--- a/project2.html
+++ b/project2.html
@@ -21,7 +21,7 @@
     <main>
         <!-- Project Title -->
         <section id="project-title">
-            <h1>Project Title</h1>
+            <h1>Rebuilding A Broken Wind Turbine</h1>
         </section>
 
         <!-- Section 1: Introduction -->
@@ -31,7 +31,9 @@
             </div>
             <div class="text-box">
                 <h2>Introduction</h2>
-                <p>Introduction content goes here...</p>
+                <p>Testing the website is a crucial step to ensure that all features and functionalities are working as expected. By conducting thorough testing, we can identify any potential issues or bugs that may affect the user experience. This process involves checking the responsiveness of the website across different devices and screen sizes, verifying that all links and buttons are functioning correctly, and ensuring that the design elements are displayed consistently across various browsers. Additionally, it is important to test the loading speed of the website to ensure that it provides a smooth and efficient experience for users. Any feedback or errors identified during testing will be documented and addressed promptly to improve the overall quality of the site. By investing time in testing, we can ensure that the final product is polished, user-friendly, and ready for deployment.
+
+                </p>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
@@ -45,7 +47,9 @@
             </div>
             <div class="text-box">
                 <h2>Planning + Research</h2>
-                <p>Planning and research content goes here...</p>
+                <p>Testing the website is a crucial step to ensure that all features and functionalities are working as expected. By conducting thorough testing, we can identify any potential issues or bugs that may affect the user experience. This process involves checking the responsiveness of the website across different devices and screen sizes, verifying that all links and buttons are functioning correctly, and ensuring that the design elements are displayed consistently across various browsers. Additionally, it is important to test the loading speed of the website to ensure that it provides a smooth and efficient experience for users. Any feedback or errors identified during testing will be documented and addressed promptly to improve the overall quality of the site. By investing time in testing, we can ensure that the final product is polished, user-friendly, and ready for deployment.
+
+                </p>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
@@ -59,7 +63,9 @@
             </div>
             <div class="text-box">
                 <h2>Materials</h2>
-                <p>Materials content goes here...</p>
+                <p>Testing the website is a crucial step to ensure that all features and functionalities are working as expected. By conducting thorough testing, we can identify any potential issues or bugs that may affect the user experience. This process involves checking the responsiveness of the website across different devices and screen sizes, verifying that all links and buttons are functioning correctly, and ensuring that the design elements are displayed consistently across various browsers. Additionally, it is important to test the loading speed of the website to ensure that it provides a smooth and efficient experience for users. Any feedback or errors identified during testing will be documented and addressed promptly to improve the overall quality of the site. By investing time in testing, we can ensure that the final product is polished, user-friendly, and ready for deployment.
+
+                </p>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
@@ -73,7 +79,9 @@
             </div>
             <div class="text-box">
                 <h2>Execution</h2>
-                <p>Execution content goes here...</p>
+                <p>Testing the website is a crucial step to ensure that all features and functionalities are working as expected. By conducting thorough testing, we can identify any potential issues or bugs that may affect the user experience. This process involves checking the responsiveness of the website across different devices and screen sizes, verifying that all links and buttons are functioning correctly, and ensuring that the design elements are displayed consistently across various browsers. Additionally, it is important to test the loading speed of the website to ensure that it provides a smooth and efficient experience for users. Any feedback or errors identified during testing will be documented and addressed promptly to improve the overall quality of the site. By investing time in testing, we can ensure that the final product is polished, user-friendly, and ready for deployment.
+
+                </p>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
@@ -87,7 +95,9 @@
             </div>
             <div class="text-box">
                 <h2>Results</h2>
-                <p>Results content goes here...</p>
+                <p>Testing the website is a crucial step to ensure that all features and functionalities are working as expected. By conducting thorough testing, we can identify any potential issues or bugs that may affect the user experience. This process involves checking the responsiveness of the website across different devices and screen sizes, verifying that all links and buttons are functioning correctly, and ensuring that the design elements are displayed consistently across various browsers. Additionally, it is important to test the loading speed of the website to ensure that it provides a smooth and efficient experience for users. Any feedback or errors identified during testing will be documented and addressed promptly to improve the overall quality of the site. By investing time in testing, we can ensure that the final product is polished, user-friendly, and ready for deployment.
+
+                </p>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
@@ -101,7 +111,9 @@
             </div>
             <div class="text-box">
                 <h2>Reflection</h2>
-                <p>Reflection content goes here...</p>
+                <p>Testing the website is a crucial step to ensure that all features and functionalities are working as expected. By conducting thorough testing, we can identify any potential issues or bugs that may affect the user experience. This process involves checking the responsiveness of the website across different devices and screen sizes, verifying that all links and buttons are functioning correctly, and ensuring that the design elements are displayed consistently across various browsers. Additionally, it is important to test the loading speed of the website to ensure that it provides a smooth and efficient experience for users. Any feedback or errors identified during testing will be documented and addressed promptly to improve the overall quality of the site. By investing time in testing, we can ensure that the final product is polished, user-friendly, and ready for deployment.
+
+                </p>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
@@ -115,7 +127,9 @@
             </div>
             <div class="text-box">
                 <h2>Conclusion</h2>
-                <p>Conclusion content goes here...</p>
+                <p>Testing the website is a crucial step to ensure that all features and functionalities are working as expected. By conducting thorough testing, we can identify any potential issues or bugs that may affect the user experience. This process involves checking the responsiveness of the website across different devices and screen sizes, verifying that all links and buttons are functioning correctly, and ensuring that the design elements are displayed consistently across various browsers. Additionally, it is important to test the loading speed of the website to ensure that it provides a smooth and efficient experience for users. Any feedback or errors identified during testing will be documented and addressed promptly to improve the overall quality of the site. By investing time in testing, we can ensure that the final product is polished, user-friendly, and ready for deployment.
+
+                </p>
             </div>
             <div class="image-box">
                 <img src="https://via.placeholder.com/400" alt="Placeholder Image">
