--- a/project1.html
+++ b/project1.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="project-page">
     <header>
         <nav>
             <ul>
