--- a/project1.html
+++ b/project1.html
@@ -27,7 +27,7 @@
         <!-- Section 1: Introduction -->
         <section class="project-section">
             <div class="image-box">
-                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                <img src="pictures\projectpics\individual project pics\Plastic Bottle\planning1.jpg" alt="Placeholder Image">
             </div>
             <div class="text-box">
                 <h2>Introduction</h2>
@@ -36,7 +36,7 @@
                 </p>
             </div>
             <div class="image-box">
-                <img src="https://via.placeholder.com/400" alt="Placeholder Image">
+                <img src="pictures\projectpics\individual project pics\Plastic Bottle\planning2.jpg" alt="Placeholder Image">
             </div>
         </section>
 
